updates navbar styling - hide icons and don't center text on small devices - align icon style to be outlined and squared - fixed title brand text style

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -23,7 +23,6 @@ body {
 .title-brand {
     font-family: BungeeShade, sans-serif;
     font-size: 1.75em;
-    font-weight: bold;
 }
 
 ul.geo-info {
